docs(UserController): swagger 설명 추가